--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@ layout: compress
         <p>
           <a href="">Monday Section</a><br>
           <span class="underlined"><strong>Meets:</strong></span>&nbsp; Monday 3-6:50pm in ENVD 234<br>
-          <span class="underlined"><strong>Instructor:</strong></span>&nbsp; Matt Bethancourt 👉 matt.bethancourt@colorado.edu
+          <span class="underlined"><strong>Instructor:</strong></span>&nbsp; Matt Bethancourt 👉 matthew.bethancourt@colorado.edu
         </p>
         <br>
         <p>
