--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -218,6 +218,13 @@ footer {
 
 table{
   padding:1em 0;
+   // border: 1px solid black;
+}
+
+th, td {
+    padding: 5px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
 }
 
 
